# biometrics-tracker

./: MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: static.yml
biometrics_tracker/: requirements.txt
biometrics_tracker/config/: createconfig.py  json_handler.py  logging_config.py  plugin_config.py
biometrics_tracker/gui/: tk_gui.py  widgets.py
biometrics_tracker/help/: add-edit-person.html  add-edit-schedules.html  entry-edit.html  glossary.html  import-export.html  reports.html  scheduling.html  start-scheduler.html  startup.html  user-doc-index.html  viewing-upcoming-events.html
biometrics_tracker/ipc/: messages.py  queue_manager.py
biometrics_tracker/main/: core.py  dispatcher.py  main.py  scheduler.py
biometrics_tracker/model/: datapoints.py  exporters.py  importers.py  json_handler.py  persistence.py  uoms.py
biometrics_tracker/output/: reports.py
biometrics_tracker/plugin/: browser.py  json_handler.py  plugin.py
biometrics_tracker/utilities/: utilities.py
docs/source/: api.rst  conf.py  config-createconfig.rst  config-json_handler.rst  config-logging_config.rst  config-plugin_config.rst  gui-tk-gui.rst  gui-validators.rst  gui-widgets.rst  index.rst  main-core.rst  main-dispatcher.rst  main-scheduler.rst  main.rst  model-datapoints.rst  model-exporters.rst  model-importers.rst  model-json_handler.rst  model-persistence.rst  model-uoms.rst  output-reports.rst  plugin-json_handler.rst  plugin-plugin.rst  tests-config-config_fixtures.rst  tests-config-test_json_handler.rst  (+12 more)
tests/: random_data.py  test_tools.py
(+14 files in other folders)
