[project]
name = "biometrics-tracker"
version = "1.1.0"
description = "This application records and reports biometric measurements (e.g. weight, blood pressure, pulse)"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'ttkbootstrap>="1.9.0"',
    'fpdf2>="2.5.7"',
    'schedule>="1.1.0"',
    'pytest',
 ]
keywords = [
    "biometrics",
    "health",
    "blood pressure",
    "blood sugar", ]

[project.gui-scripts]
biotrack = "biometrics_tracker.main.main:launch"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--import-mode=append"
testpaths = [
    "tests",
]




